fix: error fix in notebook

--- a/htr_notebook.ipynb
+++ b/htr_notebook.ipynb
@@ -66,8 +66,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "640ddea0",
+   "metadata": {},
+   "source": [
+    "### Load TrOCR Processor and Model\n",
+    "\n",
+    "Loads the TrOCR processor and vision-encoder-decoder model from Hugging Face.\n",
+    "The tokenizer is explicitly loaded in slow mode to ensure stability and avoid fast-tokenizer compatibility issues.\n",
+    "\n",
+    "The model is moved to the selected computation device and loaded only once for efficiency."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "c752d7a0",
    "metadata": {},
    "outputs": [
@@ -105,7 +118,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model ready ✅\n"
+      "Model ready \n"
      ]
     }
    ],
@@ -138,13 +151,25 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aacc021d",
+   "id": "789b3495",
    "metadata": {},
    "source": [
-    "## Model Configuration\n",
+    "## Image Loading Utility\n",
     "### Description\n",
     "\n",
-    "Defines the pretrained TrOCR model to be used for handwritten text recognition. Generation parameters such as maximum output length and beam search settings are also initialized here."
+    "Defines a helper function to load an image from disk and convert it into a consistent RGB format suitable for preprocessing and inference."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "74228838",
+   "metadata": {},
+   "source": [
+    "### Image Preprocessing\n",
+    "\n",
+    "This block performs classical image preprocessing using OpenCV.\n",
+    "Steps include grayscale conversion, noise reduction, contrast normalization, and format conversion.\n",
+    "These operations improve OCR accuracy, especially for handwritten documents."
    ]
   },
   {
@@ -205,6 +230,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "97651467",
+   "metadata": {},
+   "source": [
+    "## Line Segmentation\n",
+    "### Description\n",
+    "\n",
+    "Implements line-level segmentation using horizontal projection profiles.\n",
+    "Segmenting text into individual lines improves recognition accuracy and reduces model confusion caused by multi-line inputs."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 22,
    "id": "0e786a25",
@@ -244,6 +281,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9bc10d71",
+   "metadata": {},
+   "source": [
+    "## OCR Inference Function\n",
+    "\n",
+    "\n",
+    "Encapsulates the OCR inference logic.\n",
+    "The function processes a single image or text line, runs it through the TrOCR model, and decodes the generated output into readable text."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 23,
    "id": "171dde53",
@@ -266,6 +315,18 @@
     "    generated_ids = model.generate(pixel_values, **gen_kwargs)\n",
     "    preds = processor.batch_decode(generated_ids, skip_special_tokens=True)\n",
     "    return preds[0]\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7b443a26",
+   "metadata": {},
+   "source": [
+    "## Text Normalization\n",
+    "\n",
+    "\n",
+    "Cleans raw OCR output by removing extra whitespace, line breaks, and formatting artifacts.\n",
+    "This step ensures consistency before applying spelling or domain corrections."
    ]
   },
   {
@@ -292,6 +353,18 @@
     "    return text.strip()\n",
     "\n",
     "print('postprocessing ready')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "13231b5e",
+   "metadata": {},
+   "source": [
+    "## Spell Correction and Domain-Specific Post-Processing\n",
+    "\n",
+    "\n",
+    "Applies dictionary-based spell correction using SymSpell and fixes common OCR misinterpretations with domain-aware replacements.\n",
+    "This significantly improves readability and correctness of the final output."
    ]
   },
   {
@@ -324,6 +397,17 @@
     "        suggestions = sym_spell.lookup(word, Verbosity.CLOSEST, max_edit_distance=2)\n",
     "        corrected.append(suggestions[0].term if suggestions else word)\n",
     "    return \" \".join(corrected)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a1ba37f9",
+   "metadata": {},
+   "source": [
+    "## End-to-End Image OCR Pipeline\n",
+    "\n",
+    "Combines preprocessing, line segmentation, inference, and post-processing into a single pipeline function.\n",
+    "This function represents the complete OCR flow for a handwritten image."
    ]
   },
   {
@@ -394,6 +478,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "647f74d8",
+   "metadata": {},
+   "source": [
+    "## Quick Demo on Sample Images\n",
+    "\n",
+    "\n",
+    "Runs the OCR pipeline on sample handwritten images stored in a local directory.\n",
+    "This section demonstrates practical usage and prints recognized text line by line."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 27,
    "id": "7c38a21c",
@@ -408,6 +504,18 @@
     "    \"\"\"\n",
     "    pages = convert_from_path(pdf_path, dpi=dpi)\n",
     "    return pages\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "291ed329",
+   "metadata": {},
+   "source": [
+    "## Text Line Validation\n",
+    "### Description\n",
+    "\n",
+    "Defines heuristics to filter out non-text regions such as separators, noise, tables, or extremely thin lines.\n",
+    "This step prevents meaningless OCR outputs like repeated zeros or artifacts."
    ]
   },
   {
@@ -447,6 +555,18 @@
     "        return False\n",
     "\n",
     "    return True\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6526bdcd",
+   "metadata": {},
+   "source": [
+    "## OCR on PDF Documents\n",
+    "\n",
+    "\n",
+    "Applies the OCR pipeline to each page of a PDF document.\n",
+    "Text is extracted page-wise and concatenated while preserving logical structure."
    ]
   },
   {
@@ -495,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "d2901f00",
    "metadata": {},
    "outputs": [
@@ -528,7 +648,71 @@
       "1 Mechanisms _____________________________________\n",
       "#______\n",
       "# Other qualifications of the IFPI accepts the\n",
-      "\" Language! of strings that have a subslying\n"
+      "\" Language! of strings that have a subslying\n",
+      "\n",
+      "--- Processing Page 4 ---\n",
+      "1 Mechanisms _____________________________________\n",
+      "#______\n",
+      "more than?\n",
+      "A- Guinea complexity : 0\n",
+      ". The time needed for his\n",
+      "creating an impulsting #\n",
+      "a b c d e SUDOCAST YEAR OF WESTERN OF WESTERN OF\n",
+      "A Pugemary is a\n",
+      "References\n",
+      "\n",
+      "--- Processing Page 5 ---\n",
+      "1 Mechanisms ___________________________________________\n",
+      "#______\n",
+      "Kagulan expressions and languages :\n",
+      "a b c d\n",
+      ". The sudden that define the regular\n",
+      "compensations are alphabetical tax as follows :\n",
+      "if if is a regular exposition that denotes the null set.\n",
+      "OF is a regular expression that denotes empty set if I\n",
+      "a few years\n",
+      "1 Mechanisms _____________________________________\n",
+      "#______\n",
+      "1 References\n",
+      "implied string is acceptable or not.\n",
+      "A finite automation has a mechanism to\n",
+      "it will\n",
+      "I read impact, which is a strong over a given\n",
+      "\", alphabetical. This impul is actually written on an\n",
+      "if fundamental strategies are used as an increase in\n",
+      "\n",
+      "1 Mechanisms _____________________________________\n",
+      "#______\n",
+      "a b c\n",
+      "displaystyle _ 0\n",
+      "2 Legal files\n",
+      "a man and wait\n",
+      "References\n",
+      "\n",
+      "1 Mechanisms _____________________________________\n",
+      "#______\n",
+      "# Other qualifications of the IFPI accepts the\n",
+      "\" Language! of strings that have a subslying\n",
+      "\n",
+      "1 Mechanisms _____________________________________\n",
+      "#______\n",
+      "more than?\n",
+      "A- Guinea complexity : 0\n",
+      ". The time needed for his\n",
+      "creating an impulsting #\n",
+      "a b c d e SUDOCAST YEAR OF WESTERN OF WESTERN OF\n",
+      "A Pugemary is a\n",
+      "References\n",
+      "\n",
+      "1 Mechanisms ___________________________________________\n",
+      "#______\n",
+      "Kagulan expressions and languages :\n",
+      "a b c d\n",
+      ". The sudden that define the regular\n",
+      "compensations are alphabetical tax as follows :\n",
+      "if if is a regular exposition that denotes the null set.\n",
+      "OF is a regular expression that denotes empty set if I\n",
+      "a few years\n"
      ]
     }
    ],
@@ -541,8 +725,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "936c72a9",
+   "metadata": {},
+   "source": [
+    "## Export OCR Output to DOCX\n",
+    "\n",
+    "\n",
+    "Demonstrates how to export recognized text into a Word document for editing, sharing, or archival purposes."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "b2d734eb",
    "metadata": {},
    "outputs": [],
@@ -560,7 +755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "cc8f0377",
    "metadata": {},
    "outputs": [
@@ -621,7 +816,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "7facfeaa",
    "metadata": {},
    "outputs": [
@@ -658,6 +853,125 @@
     "    c.save()\n",
     "\n",
     "print('export functions ready')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "eed05318",
+   "metadata": {},
+   "source": [
+    "## Evaluation Metrics (CER & WER)\n",
+    "\n",
+    "\n",
+    "Defines an evaluation helper to compute Character Error Rate (CER) and Word Error Rate (WER) using a labeled CSV file.\n",
+    "These metrics quantitatively measure OCR performance."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "327ce836",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "from tqdm import tqdm\n",
+    "from jiwer import cer, wer\n",
+    "\n",
+    "def evaluate_ocr(csv_path, model, processor, device):\n",
+    "    \"\"\"\n",
+    "    Evaluate OCR performance using CER and WER.\n",
+    "\n",
+    "    Args:\n",
+    "        csv_path (str): CSV with columns [image_path, transcription]\n",
+    "        model: TrOCR model\n",
+    "        processor: TrOCR processor\n",
+    "        device: cpu / cuda\n",
+    "\n",
+    "    Returns:\n",
+    "        dict: CER and WER scores\n",
+    "    \"\"\"\n",
+    "\n",
+    "    df = pd.read_csv(csv_path)\n",
+    "\n",
+    "    predictions = []\n",
+    "    ground_truths = []\n",
+    "\n",
+    "    for _, row in tqdm(df.iterrows(), total=len(df)):\n",
+    "        img = load_image(row[\"image_path\"])\n",
+    "        proc = preprocess_image_cv(img)\n",
+    "\n",
+    "        lines = segment_lines(proc)\n",
+    "\n",
+    "        predicted_lines = []\n",
+    "        for line in lines:\n",
+    "            if not is_valid_text_line(line):\n",
+    "                continue\n",
+    "\n",
+    "            text = predict_image(line, model, processor, device)\n",
+    "            text = normalize_text(text)\n",
+    "            text = correct_text(text)\n",
+    "\n",
+    "            if len(text) > 2:\n",
+    "                predicted_lines.append(text)\n",
+    "\n",
+    "        prediction = \" \".join(predicted_lines)\n",
+    "\n",
+    "        predictions.append(prediction)\n",
+    "        ground_truths.append(row[\"transcription\"])\n",
+    "\n",
+    "    return {\n",
+    "        \"CER\": cer(ground_truths, predictions),\n",
+    "        \"WER\": wer(ground_truths, predictions)\n",
+    "    }\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "cd110daf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  0%|          | 0/1 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 1/1 [00:01<00:00,  1.18s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Character Error Rate (CER): 2.477064220183486\n",
+      "Word Error Rate (WER): 2.272727272727273\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "metrics = evaluate_ocr(\n",
+    "    csv_path=\"data/eval_labels.csv\",\n",
+    "    model=model,\n",
+    "    processor=processor,\n",
+    "    device=DEVICE\n",
+    ")\n",
+    "\n",
+    "print(\"Character Error Rate (CER):\", metrics[\"CER\"])\n",
+    "print(\"Word Error Rate (WER):\", metrics[\"WER\"])\n"
    ]
   }
  ],
